@@ -1,14 +1,16 @@
-# $NetBSD: Makefile,v 1.9 2004/04/20 21:00:55 minskim Exp $
+# $NetBSD: Makefile,v 1.10 2004/04/20 21:19:35 minskim Exp $
 
-DISTNAME=	XML-XPath-1.08
+DISTNAME=	XML-XPath-1.13
 PKGNAME=	p5-${DISTNAME}
 SVR4_PKGNAME=	p5xxp
 CATEGORIES=	textproc perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=XML/}
 
 MAINTAINER=	tech-pkg@NetBSD.org
-HOMEPAGE=	http://sergeant.org/
+HOMEPAGE=	http://search.cpan.org/dist/XML-XPath/
 COMMENT=	XML XPath software
+
+DEPENDS+=	p5-XML-Parser>=2.23:../../textproc/p5-XML-Parser
 
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
 
