@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.2 2001/04/20 15:05:04 skrll Exp $
+$NetBSD: distinfo,v 1.3 2004/04/20 21:19:35 minskim Exp $
 
-SHA1 (XML-XPath-1.08.tar.gz) = 19714ae5c0b9844507c6f750508c34079761cfe6
-Size (XML-XPath-1.08.tar.gz) = 39176 bytes
+SHA1 (XML-XPath-1.13.tar.gz) = 72a8e7a71f5d0b46e004adfbc5c5dbf59affd03c
+Size (XML-XPath-1.13.tar.gz) = 39832 bytes
